2021-06-30  Antoine Quint  <graouts@webkit.org>

        [Model] [macOS] Add support for rendering model resources
        https://bugs.webkit.org/show_bug.cgi?id=227530
        <rdar://problem/79968206>

        Reviewed by Dean Jackson.

        Add a new compile-time flag indicating the availability of the ASVInlinePreview SPI on macOS.
        We only define it when the header itself is present for now to avoid issues with older macOS
        12 SDKs, but ultimately we will only use the macOS version check.

        * wtf/PlatformHave.h:

2021-06-30  Megan Gardner  <megan_gardner@apple.com>

        Add ID and versioning support for AppHighlights
        https://bugs.webkit.org/show_bug.cgi?id=227279

        Reviewed by Tim Horton.

        Allow PersistentDecoders to rewind, to help support v0 highlight data.

        * wtf/persistence/PersistentDecoder.cpp:
        (WTF::Persistence::Decoder::Decoder):
        (WTF::Persistence::Decoder::rewind):
        * wtf/persistence/PersistentDecoder.h:

2021-06-30  Ryosuke Niwa  <rniwa@webkit.org>

        Use WeakHashMap and WeakPtr with Node in more places
        https://bugs.webkit.org/show_bug.cgi?id=227192
        <rdar://problem/79828322>

        Reviewed by Geoffrey Garen.

        * wtf/WeakHashMap.h:
        (WTF::WeakHashMap::WeakHashMapIteratorBase::makePeek): Fixed type mismatch errors.
        (WTF::WeakHashMap::ensure): Made this function return AddResult like HashMap::ensure.
        (WTF::WeakHashMap::take): Added.
        (WTF::WeakHashMap::removeIf): Fixed the bug that the callback was called with the iterator
        of m_impl and not WeakHashMapIterator.
        * wtf/WeakHashSet.h:
        (WTF::HashTraits<Ref<WeakPtrImpl<Counter>>>::isReleasedWeakValue): Moved to WeakPtr.h
        * wtf/WeakPtr.h:
        (WTF::HashTraits<Ref<WeakPtrImpl<Counter>>>::isReleasedWeakValue): Moved from WeakHashSet.h

2021-06-30  Truitt Savell  <tsavell@apple.com>

        Unreviewed, reverting r279405.
