@@ -1080,3 +1080,7 @@
 #if !PLATFORM(IOS_FAMILY_SIMULATOR) && !PLATFORM(WATCHOS)
 #define HAVE_SYMPTOMS_FRAMEWORK 1
 #endif
+
+#if !defined(HAVE_GROUP_ACTIVITIES) && PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 120000
+#define HAVE_GROUP_ACTIVITIES 1
+#endif
