@@ -1,3 +1,14 @@
+2021-07-01  Jer Noble  <jer.noble@apple.com>
+
+        [Mac] (Re-)enable GroupActivities after upstreaming
+        https://bugs.webkit.org/show_bug.cgi?id=227546
+
+        Reviewed by Eric Carlson.
+
+        Add support for HAVE_GROUP_ACTIVITIES.
+
+        * wtf/PlatformHave.h:
+
 2021-06-30  Antoine Quint  <graouts@webkit.org>
 
         [Model] [macOS] Add support for rendering model resources
